# coco-alma

./: .gitignore  .gitmodules  CMakeLists.txt  Cell.cpp  Cell.h  Circuit.cpp  Circuit.h  CircuitGraph.py  GlitchyPVS.h  NoPVS.h  PropVarSet.cpp  PropVarSet.h  SafeGraph.py  SatChecker.py  SatSolver.cpp  SatSolver.h  Simulator.cpp  Simulator.h  Simulator.hpp  Solver.py  Symbol.cpp  Symbol.h  SymbolManager.cpp  SymbolManager.h  VCDStorage.py  Value.cpp  Value.h  Value.hpp  ValueView.h  ValueView.hpp  VarManager.cpp  VarManager.h  cell_types.cpp  cell_types.h  classes.py  coco.cpp  common.h  dbg.py  defines.py  helpers.py  (+5 more)
.github/workflows/: coco-cpp.yml  coco-test.yml
doc/: rand_timing_example.tex
examples/aes_dom/: aes_dom_wrapper.v  generate_labels.py  labels.txt  readme.md  run_pipeline.py  synth.py  testbench_aes.h  verilator_tb.cpp  verilator_tb_solo.cpp
examples/gadgets/: labels_dom_and_1storder.txt  labels_dom_and_1storder_broken.txt  labels_dom_and_2ndorder.txt  labels_dom_and_3rdorder.txt  labels_isw_and_1storder.txt  labels_isw_and_1storder_broken.txt  labels_ti_toffoli.txt  verilator_tb.cpp
examples/gadgets/design/: dom_and.v  isw_and.v  ti_toffoli.v
examples/ibex/: assemble.py  config.json  readme.md  verilator_tb_template.txt
examples/ibex/ibex-secure-files/: labels.txt  yosys_synth.ys
examples/ibex/labels/: aes_sbox.txt  stable_fail_4.txt  stable_ok_10.txt  test_xor_rand.txt  transient_fail_4.txt  transient_ok_2.txt
examples/ibex/programs/: aes_sbox.S  aes_sbox_init  stable_fail_4.S  stable_ok_10.S  test_xor_rand.S  transient_fail_4.S  transient_ok_2.S
examples/keccak_dom/: labels.txt  readme.md  verilator_tb.cpp
examples/keccak_dom/design/: keccak_sbox.v
examples/prince_ti/: generate_labels.py  labels.txt  labels_secure.txt  readme.md  run_pipeline.py  testbench_prince.h  verilator_tb.cpp  verilator_tb_secure.cpp
examples/prince_ti/design/: M0_Share1.sv  M1_Share1.sv  Mprime_cir.sv  affine_2sh.sv  affine_share1.sv  affine_share2.sv  inv_sr_2sh.sv  inv_sr_cir.sv  mprime_cir_2sh.sv  mux_cir.sv  mux_cir_2sh.sv  out_key_share_flip.sv  s.sv  s_bit1.sv  s_bit1_sh1.sv  s_bit1_sh2.sv  s_bit1_sh3.sv  s_bit1_sh4.sv  s_bit1_sh5.sv  s_bit1_sh6.sv  s_bit1_sh7.sv  s_bit1_sh8.sv  s_bit2.sv  s_bit2_sh1.sv  s_bit2_sh2.sv  s_bit2_sh3.sv  s_bit2_sh4.sv  s_bit2_sh5.sv  s_bit2_sh6.sv  s_bit2_sh7.sv  s_bit2_sh8.sv  s_bit3.sv  s_bit3_sh1.sv  s_bit3_sh2.sv  s_bit3_sh3.sv  s_bit3_sh4.sv  s_bit3_sh5.sv  s_bit3_sh6.sv  s_bit3_sh7.sv  s_bit3_sh8.sv  (+18 more)
templates/: testbench.h  testbench_ibex.h  yosys_synth_template.txt
test/: CMakeLists.txt  basicTest.py  test_util.h  unit-cell.cpp  unit-pvs.cpp  unit-sim-gadgets.cpp  unit-solver.cpp  unit-value.cpp  verificatonContext.py
test/gadgets/: dom_and.v  synth.tcl
test/gadgets/synthd/: dom_and_2.json  dom_and_2.v  dom_and_3.json  dom_and_3.v  dom_and_4.json  dom_and_4.v
